--- a/.github/workflows/framework-kind.yaml
+++ b/.github/workflows/framework-kind.yaml
@@ -9,6 +9,6 @@ on:
 jobs:
   fw-kind-tests:
     name: KinD
-    uses: stolostron/governance-policy-framework/.github/workflows/kind.yml@main
+    uses: JustinKuli/governance-policy-framework/.github/workflows/kind.yml@9016260c57d66f65deae9e50dfac48a667550981
     with:
       hub_only_component: 'true'
